// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`babel-plugin-teamplay > eliminates default aggregation files for client builds 1`] = `
"import { __aggregationHeader } from 'startupjs';
export default __aggregationHeader({
  collection: "users/$$active".split(/[\\\\/\\.]/).at(-2),
  name: "users/$$active".split(/[\\\\/\\.]/).at(-1)
});"
`;

exports[`babel-plugin-teamplay > eliminates server-only model code for client builds 1`] = `
"import { __aggregationHeader } from 'teamplay';
export const $$active = __aggregationHeader({
  collection: "users",
  name: "$$active"
});
export const access = undefined;
export const secret = undefined;"
`;

exports[`babel-plugin-teamplay > eliminates server-only model code from nested plugin model folders 1`] = `
"export const access = undefined;
export const secret = undefined;"
`;

exports[`babel-plugin-teamplay > exports synchronous Node file-based models 1`] = `
{
  "users": {
    "$$active": {
      "pipeline": [
        {
          "$match": {
            "active": true,
          },
        },
      ],
    },
    "__esModule": true,
    "access": {
      "create": true,
    },
    "default": {
      "name": "Users",
      "type": "function",
    },
    "schema": {
      "name": {
        "description": "Public display name",
        "label": "User name",
        "type": "string",
      },
      "profile": {
        "properties": {
          "bio": {
            "label": "Bio",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "users.*": {
    "__esModule": true,
    "default": {
      "name": "User",
      "type": "function",
    },
  },
}
`;

exports[`babel-plugin-teamplay > generates require.context loading code 1`] = `
"const autoInit = true;
const __teamplayModelsContext = require.context("../models", true, /\\.[mc]?[jt]sx?$/);
const models = (() => {
  let modelPatterns = __teamplayModelsContext.keys().reduce((res, filePath) => {
    const pattern = __teamplayGetModelPattern(filePath);
    if (pattern === null) return res;
    return {
      ...res,
      [pattern]: filePath
    };
  }, {});
  modelPatterns = __teamplaySanitizeAndMergeModelPatterns(modelPatterns);
  const res = {};
  for (const [modelPattern, parts] of Object.entries(modelPatterns)) {
    const fileParts = parts.map(part => {
      if (part.type === 'model') return __teamplayModelsContext(part.value);
      return {
        [part.name]: __teamplayModelsContext(part.value).default
      };
    });
    res[modelPattern] = Object.assign({}, ...fileParts);
  }
  return res;
})();
function __teamplayGetModelPattern(modelFilename) {
  const MODEL_PATTERN_REGEX = /^[a-zA-Z0-9$_*.]+$/;
  let pattern = modelFilename;
  if (/\\*/.test(pattern)) throw Error("[models] Instead of '*' in model filename use '[id]'. Got: " + modelFilename);
  pattern = pattern.replace(/\\[[^\\]]+\\]/g, '*');
  pattern = pattern.replace(/^\\.\\//, '');
  pattern = pattern.replace(/\\.[^.]+$/, '');
  pattern = pattern.replace(/[\\\\/]/g, '.');
  if (pattern.split('.').some(section => section.startsWith('-'))) return null;
  if (!MODEL_PATTERN_REGEX.test(pattern)) {
    throw Error("[models] Invalid model filename pattern: " + modelFilename + "\\n" + "It has to comply with the following regex: " + MODEL_PATTERN_REGEX.toString() + " with '[id]' instead of '*'");
  }
  if (pattern === 'index') pattern = '';
  if (/\\.index$/.test(pattern)) pattern = pattern.replace(/\\.index$/, '');
  return pattern;
}
function __teamplaySanitizeAndMergeModelPatterns(modelPatterns) {
  const res = {};
  for (const [modelPattern, value] of Object.entries(modelPatterns)) {
    const sections = modelPattern.split('.');
    const lastSection = sections.pop();
    let pattern = sections.join('.');
    let type;
    let method = 'push';
    if (/^\\$\\$/.test(lastSection)) type = 'aggregation';else if (lastSection === 'schema') type = 'schema';else if (lastSection === 'access') type = 'access';else {
      type = 'model';
      pattern = modelPattern;
      method = 'unshift';
    }
    res[pattern] ??= [];
    res[pattern][method]({
      type,
      name: lastSection,
      value
    });
  }
  return res;
}
export { models, autoInit };"
`;

exports[`babel-plugin-teamplay > generates static imports for file-based models 1`] = `
"import * as _modelsEventsIndexTs from "../models/events/index.ts";
import _default from "../models/events/$$active.ts";
import _default2 from "../models/events/access.ts";
import _default3 from "../models/events/schema.ts";
import * as _modelsEventsIdTs from "../models/events/[id].ts";
import * as _modelsEventsIdCommentsCommentIdTs from "../models/events/[id]/comments/[commentId].ts";
const autoInit = false;
const models = {
  "events": Object.assign({}, _modelsEventsIndexTs, {
    "$$active": _default
  }, {
    "access": _default2
  }, {
    "schema": _default3
  }),
  "events.*": Object.assign({}, _modelsEventsIdTs),
  "events.*.comments.*": Object.assign({}, _modelsEventsIdCommentsCommentIdTs)
};
export { models, autoInit };"
`;

exports[`babel-plugin-teamplay > generates teamplay-env.d.ts with schema field jsdoc 1`] = `
"// This file is generated by TeamPlay. Do not edit manually.
/* eslint-disable */
import { type CollectionsFromManifest, type FromJsonSchema, type PathModelsFromManifest, type SignalChild } from 'teamplay'
import type __CollectionModel0 from "./models/events/index.ts"
import type __Schema1 from "./models/events/schema.ts"
import type __PathModel2 from "./models/events/[id].ts"
import type __PathModel3 from "./models/events/[id]/comments/[commentId].ts"

interface __TeamplayModelManifest {
  "events": {
    default: typeof __CollectionModel0
    schema: typeof __Schema1
  }
  "events.*": {
    default: typeof __PathModel2
  }
  "events.*.comments.*": {
    default: typeof __PathModel3
  }
}

type __EventsDoc = FromJsonSchema<typeof __Schema1>
interface __EventsFields {
  /**
   * Event title
   *
   * Visible public event name
   */
  readonly "title": SignalChild<NonNullable<__EventsDoc>["title"], readonly ["events", "*", "title"]>
  /**
   * Event title
   *
   * Visible public event name
   */
  readonly "$title": SignalChild<NonNullable<__EventsDoc>["title"], readonly ["events", "*", "title"]>
  /**
   * Event description
   */
  readonly "description": SignalChild<NonNullable<__EventsDoc>["description"], readonly ["events", "*", "description"]>
  /**
   * Event description
   */
  readonly "$description": SignalChild<NonNullable<__EventsDoc>["description"], readonly ["events", "*", "description"]>
  /**
   * Event type
   */
  readonly "type": SignalChild<NonNullable<__EventsDoc>["type"], readonly ["events", "*", "type"]>
  /**
   * Event type
   */
  readonly "$type": SignalChild<NonNullable<__EventsDoc>["type"], readonly ["events", "*", "type"]>
  /**
   * Requires approval
   */
  readonly "required": SignalChild<NonNullable<__EventsDoc>["required"], readonly ["events", "*", "required"]>
  /**
   * Requires approval
   */
  readonly "$required": SignalChild<NonNullable<__EventsDoc>["required"], readonly ["events", "*", "required"]>
  /**
   * Enum named field
   */
  readonly "enum": SignalChild<NonNullable<__EventsDoc>["enum"], readonly ["events", "*", "enum"]>
  /**
   * Enum named field
   */
  readonly "$enum": SignalChild<NonNullable<__EventsDoc>["enum"], readonly ["events", "*", "enum"]>
  /**
   * Const named field
   */
  readonly "const": SignalChild<NonNullable<__EventsDoc>["const"], readonly ["events", "*", "const"]>
  /**
   * Const named field
   */
  readonly "$const": SignalChild<NonNullable<__EventsDoc>["const"], readonly ["events", "*", "const"]>
  /**
   * Event properties
   */
  readonly "properties": SignalChild<NonNullable<__EventsDoc>["properties"], readonly ["events", "*", "properties"]> & __EventsFields_Properties
  /**
   * Event properties
   */
  readonly "$properties": SignalChild<NonNullable<__EventsDoc>["properties"], readonly ["events", "*", "properties"]> & __EventsFields_Properties
  readonly "active": SignalChild<NonNullable<__EventsDoc>["active"], readonly ["events", "*", "active"]>
  readonly "$active": SignalChild<NonNullable<__EventsDoc>["active"], readonly ["events", "*", "active"]>
  readonly "details": SignalChild<NonNullable<__EventsDoc>["details"], readonly ["events", "*", "details"]> & __EventsFields_Details
  readonly "$details": SignalChild<NonNullable<__EventsDoc>["details"], readonly ["events", "*", "details"]> & __EventsFields_Details
  readonly "createdAt": SignalChild<NonNullable<__EventsDoc>["createdAt"], readonly ["events", "*", "createdAt"]>
  readonly "$createdAt": SignalChild<NonNullable<__EventsDoc>["createdAt"], readonly ["events", "*", "createdAt"]>
}

interface __EventsFields_Properties {
  /**
   * Color
   */
  readonly "color": SignalChild<NonNullable<NonNullable<__EventsDoc>["properties"]>["color"], readonly ["events", "*", "properties", "color"]>
  /**
   * Color
   */
  readonly "$color": SignalChild<NonNullable<NonNullable<__EventsDoc>["properties"]>["color"], readonly ["events", "*", "properties", "color"]>
}

interface __EventsFields_Details {
  /**
   * Summary
   */
  readonly "summary": SignalChild<NonNullable<NonNullable<__EventsDoc>["details"]>["summary"], readonly ["events", "*", "details", "summary"]>
  /**
   * Summary
   */
  readonly "$summary": SignalChild<NonNullable<NonNullable<__EventsDoc>["details"]>["summary"], readonly ["events", "*", "details", "summary"]>
}

declare module 'teamplay' {
  interface TeamplayCollections extends CollectionsFromManifest<__TeamplayModelManifest> {}
  interface TeamplayModels extends PathModelsFromManifest<__TeamplayModelManifest> {}
  interface TeamplaySignalFields {
    "events.*": __EventsFields
  }
}
"
`;

exports[`babel-plugin-teamplay > keeps model server code when clientOnly is false 1`] = `
"import { accessControl } from 'teamplay';
export const access = accessControl({
  create: () => true
});"
`;

exports[`babel-plugin-teamplay > loads file-based models directly in Node 1`] = `
{
  "users": {
    "$$active": {
      "pipeline": [
        {
          "$match": {
            "active": true,
          },
        },
      ],
    },
    "__esModule": true,
    "access": {
      "create": true,
    },
    "default": {
      "name": "Users",
      "type": "function",
    },
    "schema": {
      "name": {
        "description": "Public display name",
        "label": "User name",
        "type": "string",
      },
      "profile": {
        "properties": {
          "bio": {
            "label": "Bio",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "users.*": {
    "__esModule": true,
    "default": {
      "name": "User",
      "type": "function",
    },
  },
}
`;

exports[`babel-plugin-teamplay > loads file-based models synchronously in Node 1`] = `
{
  "users": {
    "$$active": {
      "pipeline": [
        {
          "$match": {
            "active": true,
          },
        },
      ],
    },
    "__esModule": true,
    "access": {
      "create": true,
    },
    "default": {
      "name": "Users",
      "type": "function",
    },
    "schema": {
      "name": {
        "description": "Public display name",
        "label": "User name",
        "type": "string",
      },
      "profile": {
        "properties": {
          "bio": {
            "label": "Bio",
            "type": "string",
          },
        },
        "type": "object",
      },
    },
  },
  "users.*": {
    "__esModule": true,
    "default": {
      "name": "User",
      "type": "function",
    },
  },
}
`;

exports[`babel-plugin-teamplay > transforms direct file-based models imports 1`] = `
"import * as _modelsEventsIndexTs from "../models/events/index.ts";
import _default from "../models/events/$$active.ts";
import _default2 from "../models/events/access.ts";
import _default3 from "../models/events/schema.ts";
import * as _modelsEventsIdTs from "../models/events/[id].ts";
import * as _modelsEventsIdCommentsCommentIdTs from "../models/events/[id]/comments/[commentId].ts";
const models = {
  "events": Object.assign({}, _modelsEventsIndexTs, {
    "$$active": _default
  }, {
    "access": _default2
  }, {
    "schema": _default3
  }),
  "events.*": Object.assign({}, _modelsEventsIdTs),
  "events.*.comments.*": Object.assign({}, _modelsEventsIdCommentsCommentIdTs)
};
export default models;"
`;

exports[`babel-plugin-teamplay > transforms direct file-based models imports with fallback folders 1`] = `
"import * as _modelUsersIdJs from "../model/users/[id].js";
import * as _modelUsersIndexJs from "../model/users/index.js";
const models = {
  "users.*": Object.assign({}, _modelUsersIdJs),
  "users": Object.assign({}, _modelUsersIndexJs)
};
export default models;"
`;

exports[`babel-plugin-teamplay > uses the legacy fallback folder with a warning 1`] = `
[
  "[teamplay] Using legacy "model/" models folder. Please migrate to "models/".",
]
`;
